# simple-rdma

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
scripts/: compile.sh
sdr-rdma-artifact-paper-artifact-v1/: .gitmodules
sdr-rdma-artifact-paper-artifact-v1/sdr-api/: README.md  sdr.h  sdr_mr.h  sdr_write_bw.c
sdr-rdma-artifact-paper-artifact-v1/sdr-api/common/: oob_ibv.c  oob_ibv.h  oob_sock.c  oob_sock.h
src/: compile.sh  devinfo.h  rdma_common.c  rdma_common.h  receiver.c  receiver_uc.c  reciever_rc.c  sender  sender.c  sender_rc.c  sender_uc.c
